# space_invaders_arcade_emulator

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: labeler.yml  release.yaml
.github/workflows/: rust-clippy.yml  rust-publish.yaml  rust.yml  rustfmt.yml  stale.yml
game_audios/: put_wavs_here.txt
game_roms/: put_roms_here.txt
gnu-mingw/lib/32/: libSDL2_mixer.la
src/: Cpu.rs  Inputs.rs  SpaceInvadersArcade.rs  binary_lib.rs  main.rs  my_sdl2.rs  si_arcade.rs
src/my_sdl2/: sdl2_audio.rs  sdl2_inputs.rs  sdl2_video.rs
src/si_arcade/: cpu.rs  inputs.rs  inputs_outputs.rs  mmu.rs  ppu.rs  spu.rs
src/si_arcade/cpu/: cpu_disassembly.rs  interrupts.rs  opcodes.rs  register.rs
