[package]
name = "space_invaders_arcade_emulator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#sdl2 = "0.35"
[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["mixer"]
